# ezhikstract

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: FORMAT.md
src/ezhikstract/: __main__.py  cli.py  extractor.py  merger.py  parser.py
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_merger.py  test_parser.py
