[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ezhikstract"
description = "CLI to extract playable video from EZVIZ/Hikvision SD cards' proprietary round-robin storage format. Works specifically for devices that use hiv<xxxxx>.mp4 and index00.bin files."
readme = "README.md"
license = "Apache-2.0"

keywords = [
  "audio", 
  "cli", 
  "video", 
  "camera", 
  "cctv", 
  "cctv-cameras", 
  "extractor", 
  "extract", 
  "card", 
  "doorbell", 
  "sdcard", 
  "hikvision", 
  "sd", 
  "ezviz", 
  "hikvision-camera", 
  "ezvizhp7",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Video :: Conversion",
]

dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "imageio-ffmpeg>=0.6.0",
  "typer>=0.27.0",
  "rich>=15.0.0",
  ]

authors = [
  {name = "damianjude", email = "52243518+damianjude@users.noreply.github.com"}
]

maintainers = [
  {name = "damianjude", email = "52243518+damianjude@users.noreply.github.com"}
]

[project.scripts]
ezhikstract = "ezhikstract.cli:main"

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = "https://github.com/damianjude/ezhikstract"
Documentation = "https://github.com/damianjude/ezhikstract/blob/main/README.md"
Repository = "https://github.com/damianjude/ezhikstract"
"Issues" = "https://github.com/damianjude/ezhikstract/issues"